fix: overflow-y on mobile devices

--- a/src/App.css
+++ b/src/App.css
@@ -25,3 +25,8 @@ body {
     transform: none;
   }
 }
+
+.overflow-y-auto-scrollbar {
+  overflow-y: auto;
+  scrollbar-width: thin;
+}
